kubernetes/apps/observability/netronome/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://crd.kantai.xyz/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-traceroute-icmp
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: netronome
  ingress:
    - icmps:
        - fields:
            - family: IPv4
              type: 11
            - family: IPv6
              type: 11
            - family: IPv4
              type: 3
            - family: IPv6
              type: 1
